--- a/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls.csproj
+++ b/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls.csproj
@@ -120,6 +120,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.2.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.4.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
@@ -139,8 +140,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientControls.cs" />
+    <Compile Include="LivraisonLabels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestLabel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AltazionCommerceControls.snk" />
